[project]
name = "ctc-balance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "substrate-interface>=1.7.11",
    "matplotlib>=3.8.0",
    "filelock>=3.20.3",
]

[project.scripts]
balance = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
py-modules = ["main", "accounts"]
